optimize cloth loading logic and config